Some fixes of html files and add userEdit.html +userList.html

--- a/src/main/resources/WEB-INF/user.html
+++ b/src/main/resources/WEB-INF/user.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css"
           th:href="@{/webjars/bootstrap/3.3.7/css/bootstrap.min.css}" />
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-    <title>List off Users</title>
+    <title>List of Users</title>
 </head>
 <body>
 <table border="1px">
