--- a/src/main/resources/WEB-INF/login.html
+++ b/src/main/resources/WEB-INF/login.html
@@ -153,7 +153,7 @@
             <label for="psw"><b>Password</b></label>
             <input id="psw" type="password" placeholder="Enter Password" name="password" required>
 
-            <button type="submit">Login</button>
+            <div><input type="submit" value="Sign In"/></div>
             <label>
                 <input type="checkbox" checked="checked" name="remember"> Remember me
             </label>
