--- a/src/main/resources/WEB-INF/menu.html
+++ b/src/main/resources/WEB-INF/menu.html
@@ -2,6 +2,7 @@
      xmlns:th="http://www.thymeleaf.org"
      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3" >
     <a th:href="@{/index}">Home</a>
+    <span><a href="/user/userList">User list</a></span>
     <div class="dropdown" sec:authorize="hasRole('ROLE_ADMIN')">
         <button class="dropbtn">Admin
             <i class="fa fa-caret-down"></i>
