Add list of registered users

--- a/src/main/resources/WEB-INF/userList.html
+++ b/src/main/resources/WEB-INF/userList.html
@@ -3,26 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <title>List of Users</title>
-    <link href="/css/index.css" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-<div th:replace="userList.html"></div>
+<div th:replace="menu.html"></div>
+<!--/*@thymesVar id="users" type="com.kravchuk.service."*/-->
 <div th:switch="${users}">
-    <h2 th:case="null">There are not users!</h2>
+    <h2 th:case="null">No users yet!</h2>
     <div th:case="*">
         <h2>List of users</h2>
         <table>
             <thead>
             <tr>
+                <th style="width: 150px;">ID</th>
+                <th style="width: 150px;">First Name</th>
+                <th style="width: 150px;">Last Name</th>
+                <th style="width: 150px;">Age</th>
                 <th style="width: 150px;">Email</th>
-                <th style="width: 150px;">Role</th>
+
             </tr>
             </thead>
             <tbody>
             <tr th:each="user : ${users}">
+                <!--/*@thymesVar id="email" type="com.kravchuk.domain.User"*/-->
+                <td th:text="${user.id}"></td>
+                <td th:text="${user.firstName}"></td>
+                <td th:text="${user.LastName}"></td>
+                <td th:text="${user.age}"></td>
                 <td th:text="${user.email}"></td>
-                <td th:text="${user.userRole}"></td>
             </tr>
             </tbody>
         </table>
